--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "material-design-icons": "^3.0.1",
     "ng2-img-cropper": "^0.9.0",
     "ngx-image-cropper": "^0.1.25",
+    "ngx-mask": "^2.4.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
