--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "ng2-img-cropper": "^0.9.0",
+    "ngx-carousel": "^1.3.5",
     "ngx-image-cropper": "^0.1.25",
     "ngx-infinite-scroll": "^0.8.3",
     "ngx-mask": "^2.4.4",
